--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -5,13 +5,18 @@ $main-font-colour: #000;
 
 html, body {
   font: {
-    family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    family: "lucida grande", tahoma, verdana, arial, sans-serif;
+    size: 13px;
   }
   background: $main-bg-colour;
   color: $main-font-colour;
 }
 
+h1 { font-size: 2.8em; }
+h2 { font-size: 1.6em; }
+h3 { font-size: 1.2em; }
+p, div { margin: 8px 0; }
+
 #container {
   margin: 0 auto;
-  padding: 0 30px;
 }
