Fixing messages used as feedback from the subscribe process.

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,5 @@
-%h2="Campaign Monitor Signup"
-%p="This app allows you to easily add Campaign Monitor subscribe forms to your Facebook pages."
+%h2="Campaign Monitor Subscribe Forms"
+%p="Easily add Campaign Monitor subscribe forms to your Facebook pages"
 
 - if @pages
   %div="You can add a subscribe form to the following pages:"
