Added validation when saving a subscribe form for a page.

--- a/views/page.haml
+++ b/views/page.haml
@@ -1,5 +1,8 @@
 %div="Enter the Campaign API key and List ID to put a subscribe form on your page."
 
+- if @error_message
+  %div{:id => :subscribe_error}=@error_message
+
 %form{:id => :page, :method => :post, :action => "/page/#{@page_id}"}
   ="Message:"
   %input{:type => :text, :size => 60, :name => :message, :id => :message, :value => default_subscribe_form_message}
