--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -2,6 +2,10 @@
 
 $main-bg-colour: #fff;
 $main-font-colour: #000;
+$error-bg-colour: #ffebe8;
+$error-border-colour: #dd3c10;
+$info-bg-colour: #fff9d7;
+$info-border-colour: #e2c822;
 
 html, body {
   font: {
@@ -16,6 +20,23 @@ h1 { font-size: 2.8em; }
 h2 { font-size: 1.6em; }
 h3 { font-size: 1.2em; }
 p, div { margin: 8px 0; }
+
+.messagebox {
+  padding: 10px;
+  border-width: 1px;
+  border-style: solid;
+  font-weight: bold;
+}
+
+.infomessagebox {
+  background-color: $info-bg-colour;
+  border-color: $info-border-colour;
+}
+
+.errormessagebox {
+  background-color: $error-bg-colour;
+  border-color: $error-border-colour;
+}
 
 #container {
   margin: 0 auto;
