--- a/views/index.haml
+++ b/views/index.haml
@@ -1,8 +1,11 @@
 %h2="Campaign Monitor Subscribe Forms"
 %p="Easily add Campaign Monitor subscribe forms to your Facebook pages"
 
+- if @confirmation_message
+  %div{:id => :confirmation_message, :class => "infomessagebox messagebox"}=@confirmation_message
+
 - if @pages
-  %div="You can add a subscribe form to the following pages:"
+  %div="You can add a subscribe form to the following pages (or edit any existing subscribe forms):"
   - @pages.each do |p|
     %div
       %a{:href => "/page/#{p.id}"}="#{p.name} (#{p.category})"
