--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title="Campaign Monitor Signup"
+    %title="Campaign Monitor Subscribe Forms"
     %link{:href => "/screen.css?v=#{media_version}", :media => 'all', :rel => 'stylesheet', :type => 'text/css'}
   %body
     #container
