--- a/views/page.haml
+++ b/views/page.haml
@@ -2,18 +2,26 @@
 
 %h3=@page.name
 
-%div="Enter your Campaign API key and List ID to add a subscribe form to <em>#{@page.name}</em>."
+%div="Enter your details below to add a subscribe form to <em>#{@page.name}</em>."
 
-- if @error_message
-  %div{:id => :subscribe_error, :class => "errormessagebox messagebox"}=@error_message
+- if @error_messages
+  %div{:id => :subscribe_error, :class => "errormessagebox messagebox"}
+    %ul
+    - @error_messages.each do |e|
+      %li=e
 
 %form{:id => :page, :method => :post, :action => "/page/#{@page.id}"}
-  ="Message:"
-  %input{:type => :text, :size => 60, :name => :message, :id => :message, :value => default_subscribe_form_message}
-  %br
-  ="API Key:"
-  %input{:type => :text, :name => :apikey, :id => :apikey, :value => @sf ? @sf.api_key : ''}
-  ="List ID:"
-  %input{:type => :text, :name => :listid, :id => :listid, :value => @sf ? @sf.list_id : ''}
-  %br
-  %input{:type => :submit, :value => "Save"}
+  %p
+    ="Intro message:"
+    %input{:type => :text, :size => 60, :name => :intro_message, :id => :intro_message, :value => @sf ? @sf.intro_message : default_intro_message}
+  %p
+    ="Thanks message:"
+    %input{:type => :text, :size => 60, :name => :thanks_message, :id => :thanks_message, :value => @sf ? @sf.thanks_message : default_thanks_message}
+  %p
+    ="API Key:"
+    %input{:type => :text, :name => :apikey, :id => :apikey, :value => @sf ? @sf.api_key : ''}
+  %p
+    ="List ID:"
+    %input{:type => :text, :name => :listid, :id => :listid, :value => @sf ? @sf.list_id : ''}
+  %p
+    %input{:type => :submit, :value => "Save"}
