--- a/views/tab.haml
+++ b/views/tab.haml
@@ -1,16 +1,18 @@
 - if @sf
-  %div=default_subscribe_form_message
+  %div=@sf.intro_message
   - if @error_message
     %div{:id => :subscribe_error, :class => "errormessagebox messagebox"}=@error_message
   - if @confirmation_message
     %div{:id => :subscribe_confirmation, :class => "infomessagebox messagebox"}=@confirmation_message
 
   %form{:id => :subscribe, :method => :post, :action => "/subscribe/#{@page_id}"}
-    ="Name:"
-    %input{:type => :text, :name => :name, :id => :name, :value => (@name if @name)}
-    ="Email:"
-    %input{:type => :text, :name => :email, :id => :email, :value => (@email if @email)}
-    %br
-    %input{:type => :submit, :value => "Subscribe"}
+    %p
+      ="Name:"
+      %input{:type => :text, :name => :name, :id => :name, :value => (@name if @name)}
+    %p
+      ="Email:"
+      %input{:type => :text, :name => :email, :id => :email, :value => (@email if @email)}
+    %p
+      %input{:type => :submit, :value => "Subscribe"}
 - else
   %div{:class => "infomessagebox messagebox"}="This page hasn't had a subscribe form set up yet."
