--- a/views/tab.haml
+++ b/views/tab.haml
@@ -14,5 +14,12 @@
       %input{:type => :text, :name => :email, :id => :email, :value => (@email if @email)}
     %p
       %input{:type => :submit, :value => "Subscribe"}
+
+    - if @fields
+      - @fields.each do |f|
+        %p
+          =f.name
+          %input{:type => :text, :name => f.field_key, :id => f.field_key}
+
 - else
   %div{:class => "infomessagebox messagebox"}="This page hasn't had a subscribe form set up yet."
