--- a/views/page.haml
+++ b/views/page.haml
@@ -1,5 +1,6 @@
 %h2="Campaign Monitor Subscribe Forms"
-
+%div
+  %a{:href => "/"}="Back to my pages"
 %h3=@page.name
 
 %div="Enter your subscribe form details for <em>#{@page.name}</em> below."
