--- a/views/_custom_field.haml
+++ b/views/_custom_field.haml
@@ -6,5 +6,6 @@
       %option{:value => o}=o
 - elsif type == "MultiSelectMany"
   - options.split(',').each do |o|
-    %input{:name => "#{att_friendly_key(key)}[]", :value => o, :type => :checkbox}=o
+    %input{:name => "#{att_friendly_key(key)}[]", :value => o, :type => :checkbox}
+      &=o
     %br
