--- a/views/index.haml
+++ b/views/index.haml
@@ -1,11 +1,17 @@
 %h2="Campaign Monitor Subscribe Forms"
 %p="Easily add Campaign Monitor subscribe forms to your Facebook pages"
 
-- if @confirmation_message
-  %div{:id => :confirmation_message, :class => "infomessagebox messagebox"}=@confirmation_message
+- if @user
+  - if @confirmation_message
+    %div{:id => :confirmation_message, :class => "infomessagebox messagebox"}=@confirmation_message
 
-- if @pages
-  %div="You can add a subscribe form to the following pages (or edit any existing subscribe forms):"
-  - @pages.each do |p|
-    %div
-      %a{:href => "/page/#{p.id}"}&="#{p.name} (#{p.category})"
+  - if @pages
+    %div="You can add a subscribe form to the following pages (or edit any existing subscribe forms):"
+    - @pages.each do |p|
+      %div
+        %a{:href => "/page/#{p.id}"}&="#{p.name} (#{p.category})"
+  - else
+    %div="You aren't an admin for any Facebook pages. To add a subscribe form to a page, you need to be an admin of the page."
+- else
+  %p
+    <fb:login-button show-faces="true"></fb:login-button>
