--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,7 @@
     %title="Campaign Monitor Subscribe Forms"
     %link{:href => "/screen.css?v=#{media_version}", :media => 'all', :rel => 'stylesheet', :type => 'text/css'}
     %meta{:name => "description", :content => "Easily add Campaign Monitor subscribe forms to your Facebook pages"}
-    
+    %script{:type => "text/javascript", :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"}
   %body
     #container
       #content= yield
