--- a/views/page.haml
+++ b/views/page.haml
@@ -8,40 +8,66 @@
   - else
     ="Subscribe tab already added"
 
-%div
-  ="Enter your subscribe form details for"
-  %a{:href => @page.link, :target => "_blank"}=@page.name
-  ="below."
+- if @sf
+  :javascript
+    $(document).ready(function() {
+      $("#first-step").hide();
+      $("#lists").hide();
+      $("#clients").hide();
+      $("#list-options").show();
+    });
+- else
+  :javascript
+    $(document).ready(function() {
+      $("#first-step").show();
+    });
 
-- if @sf and @sf.errors.length > 0
-  %div{:id => :form_error, :class => "errormessagebox messagebox"}
-    %ul{:class => 'errors'}
-      - @sf.errors.each do |e|
-        %li=e
+#edit-form
+  %p
+    ="You're creating a subscribe form for "
+    %a{:href => @page.link, :target => "_blank"}=@page.name
+  #message{:class => "errormessagebox messagebox"}
 
-%form{:id => :page, :method => :post, :action => "/page/#{@page.id}"}
-  %p
-    ="Intro message:"
-    %input{:type => :text, :size => 60, :name => :intro_message, :id => :intro_message, :value => @sf ? @sf.intro_message : default_intro_message}
-  %p
-    ="Thanks message:"
-    %input{:type => :text, :size => 60, :name => :thanks_message, :id => :thanks_message, :value => @sf ? @sf.thanks_message : default_thanks_message}
-  %p
-    ="API Key:"
-    %input{:type => :text, :name => :apikey, :id => :apikey, :value => @sf ? @sf.api_key : ''}
-  %p
-    ="List ID:"
-    %input{:type => :text, :name => :listid, :id => :listid, :value => @sf ? @sf.list_id : ''}
-  %p
-    %input{:type => :submit, :value => "Save form"}
-
-- if @fields and !@fields.empty?
-  %div="Select any custom fields you'd like to include in your subscribe form."
-
-  %form{:id => :custom_fields, :method => :post, :action => "/page/#{@page.id}/fields"}
-    - @fields.each do |cf|
+  %form{:id => :page}
+    #first-step
       %p
-        %input{:id => att_friendly_key(cf.Key), :name => att_friendly_key(cf.Key), :type => :checkbox, :value => att_friendly_key(cf.Key), :checked => !@applied_fields.index(att_friendly_key(cf.Key)).nil? && "checked"}
-        %span&="#{cf.FieldName} (#{cf.DataType})"
-    %p
-      %input{:type => :submit, :value => "Save fields"}
+        ="Please enter your Campaign Monitor API Key:"
+        %input{:type => :text, :name => :apikey, :id => :apikey, :value => @sf ? @sf.api_key : ''}
+      %p
+        %a{:id => "get-clients", :href => "#"}="Get clients"
+
+    #clients
+      %p="Please select a client for whom you'd like to create your subscribe form:"
+      #clients-list
+
+    #lists
+      %p="Please select a list for which you'd like to create your subscribe form:"
+      #lists-list
+
+    #list-options
+      - if @sf
+        %p
+          %a{:href => "#"}="Start building this subscribe form from scratch."
+      - if @sf and @sf.errors.length > 0
+        %div{:id => :form_error, :class => "errormessagebox messagebox"}
+          %ul{:class => 'errors'}
+            - @sf.errors.each do |e|
+              %li=e
+      %p
+        ="Intro message:"
+        %input{:type => :text, :size => 60, :name => :intro_message, :id => :intro_message, :value => @sf ? @sf.intro_message : default_intro_message}
+      %p
+        ="Thanks message:"
+        %input{:type => :text, :size => 60, :name => :thanks_message, :id => :thanks_message, :value => @sf ? @sf.thanks_message : default_thanks_message}
+      %input{:type => :hidden, :name => :listid, :id => :listid, :value => @sf ? @sf.list_id : ''}
+
+      #custom-fields
+        %div="Select any custom fields you'd like to include in your subscribe form:"
+        #custom-fields-list
+          - if @sf and @fields
+            - @fields.each do |cf|
+              %p
+                %input{:id => att_friendly_key(cf.Key), :name => att_friendly_key(cf.Key), :type => :checkbox, :value => att_friendly_key(cf.Key), :checked => !@applied_fields.index(att_friendly_key(cf.Key)).nil? && "checked"}
+                %span&="#{cf.FieldName} (#{cf.DataType})"
+      %p
+        %a{:id => :save, :page_id => @page.id, :href => "#"}="Save Subscribe Form"
