--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -46,6 +46,23 @@ p, div { margin: 8px 0 12px 0; }
   border-color: $error-border-colour;
 }
 
+.button {
+  cursor: pointer;
+  background-color: #5B74A8;
+  border: 1px solid #999;
+  border-color: #29447E #29447E #1A356E;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  font-size: 11px;
+  color: #fff;
+  padding: 2px 6px;
+  &:hover {
+    text-decoration: none;
+    background-color: #546c9e;
+  }
+}
+
 #container {
   margin: 0 auto;
 }
