--- a/views/page.haml
+++ b/views/page.haml
@@ -48,7 +48,7 @@
     #list-options
       - if @sf
         %p
-          %a{:href => "#"}="Start building this subscribe form from scratch."
+          %a{:id => :from_scratch, :href => "#"}="Start building this subscribe form from scratch."
       - if @sf and @sf.errors.length > 0
         %div{:id => :form_error, :class => "errormessagebox messagebox"}
           %ul{:class => 'errors'}
