--- a/views/tab.haml
+++ b/views/tab.haml
@@ -6,20 +6,19 @@
     %div{:id => :subscribe_confirmation, :class => "infomessagebox messagebox"}&=@confirmation_message
 
   %form{:id => :subscribe, :method => :post, :action => "/subscribe/#{@page_id}"}
-    %p
-      ="Name:"
+    %div
+      %div{:class => :subscribe_field_title}="Name:"
       %input{:type => :text, :name => :name, :id => :name, :value => (@name if @name)}
-    %p
-      ="Email:"
+    %div
+      %div{:class => :subscribe_field_title}="Email:"
       %input{:type => :text, :name => :email, :id => :email, :value => (@email if @email)}
     - if @fields
       - @fields.each do |f|
-        %p
-          &=f.name
-          %br
+        %div{:class => "custom_field"}
+          %div{:class => "custom_field_name"}&="#{f.name}:"
           =partial :custom_field, {:type => f.data_type, :key => f.field_key, :options => f.field_options}
     %p
-      %input{:type => :submit, :value => "Subscribe"}
+      %input{:type => :submit, :value => "Subscribe", :class => :button}
 
 - else
   %div{:class => "infomessagebox messagebox"}="This page hasn't had a subscribe form set up yet."
