--- a/public/css/fb.css
+++ b/public/css/fb.css
@@ -4,6 +4,7 @@ html, body {
   font-size: 11px;
   font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
   color: #333;
+  line-height: 16px;
 }
 
 label {
