Updated arrows because Jesse is a jerk.

--- a/public/css/fb.css
+++ b/public/css/fb.css
@@ -154,7 +154,9 @@ fieldset {
   }
   
   .grey img {
-    height: 150px;
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 60px;
   }
   
   .grey p {
