Updated Gemfile. Disabled rack protection which appears to cause problems with Facebook canvas apps. Re-implemented Facebook auth js. Added scope of manage_pages to Facebook auth when using Rack::Facebook.

--- a/views/subscription-form.haml
+++ b/views/subscription-form.haml
@@ -53,3 +53,4 @@
       %label.checkbox-adjacent{:for => "name"} Custom field
     %button{:type => "submit"} Subscribe to Jimmy's Pistachios
     / Submit the form in the background. No spinners!
+    = partial :fb_root, {:js_conf => @js_conf}
