--- a/views/settings.haml
+++ b/views/settings.haml
@@ -21,69 +21,66 @@
   %body
     %header.clear
       %h1 Campaign Monitor
-      %button.sign-in
-        Log into Campaign Monitor
-        / Alt text: Logged in as Jimmy D.
-      / Add class .custom-domain if they type a period in #site-address. (Validate as they type.)
-      %menu.context-box.sign-in
-        / On error:
-        .error.hidden Oops, you mistyped your username or password.
-        %form#loginform
-          %label{:for => "site-address"} Site address
-          %label.hint .createsend.com
-          %input#site-address{:type => "text", :name => "site_url_prefix"}/
-          %input#site-address-full{:type => "hidden", :name => "site_url"}/
-          %label{:for => "username"} Username
-          %input#username{:type => "text", :name => "username"}/
-          %label{:for => "password"} Password
-          %input#password{:type => "password", :name => "password"}/
-          %button.primary{:type => "submit"} Log in
+      -if !@account
+        %button.sign-in
+          Log into Campaign Monitor
+        / Add class .custom-domain if they type a period in #site-address. (Validate as they type.)
+        %menu.context-box.sign-in
+          / On error:
+          .error.hidden Oops, you mistyped your username or password.
+          %form#loginform
+            %label{:for => "site-address"} Site address
+            %label.hint .createsend.com
+            %input#site-address{:type => "text", :name => "site_url_prefix"}/
+            %input#site-address-full{:type => "hidden", :name => "site_url"}/
+            %label{:for => "username"} Username
+            %input#username{:type => "text", :name => "username"}/
+            %label{:for => "password"} Password
+            %input#password{:type => "password", :name => "password"}/
+            %button.primary{:type => "submit"} Log in
     %section#body{:style => "display:none"}
-      %h1 Add a subscription form to:
-      %span.back{:style => "display:none"}
-        %a Other Pages
-      / Classes: .arrowed, .selected
-      .page
-        %figure
-          %img/
-        %h2 Jimmy's Pistachios
-        %p Food/Grocery · San Fransisco, California
-      .prefs
-        .pref.arrowed
-          %label{:for => "clients"} Which will add subscribers to:
-          .wrapper
-            / Hide .clients if they're a client.
-            .clients
-              %select#clients
-                %option
-                  %em Choose a client
-                %option Sally Sparrow
-            / Hide #list until they've selected a client. What's the feasibility of loading all list data for clients on load so they don't have to see a spinner here?
-            %select#list
-              %option Members list
-              %option Facebook list
-        .pref.arrowed
-          %label The form will ask for:
-          %fieldset
-            %input#name{:checked => "", :type => "checkbox"}/
-            %label.checkbox-adjacent{:for => "name"} Name
-            %br/
-            %input#name{:checked => "", :type => "checkbox"}/
-            %label.checkbox-adjacent{:for => "name"} Email
-            %br/
-            %input#name{:type => "checkbox"}/
-            %label.checkbox-adjacent{:for => "name"} Custom field
-        .pref.save
-          %button.primary Save Changes
-          / They haven't added this to the page, redirect to our App. If they have, redirect to their Page.
-      .page
-        %figure
-          %img/
-        %h2 Jimmy's Pistachios
-        %p Food/Grocery · San Fransisco, California
-      .page
-        %figure
-          %img/
-        %h2 Jimmy's Pistachios
-        %p Food/Grocery · San Fransisco, California
+      - if @pages
+        %h1 Add a subscription form to:
+        %span.back{:style => "display:none"}
+          %a Other Pages
+      
+        - @pages.each do |p|
+          %div
+            .page
+              %figure
+                %img/
+              %h2="#{p.name}"
+              %p="#{p.category}"
+            .prefs
+              .pref.arrowed
+                %label{:for => "clients"} Which will add subscribers to:
+                .wrapper
+                  / Hide .clients if they're a client.
+                  .clients
+                    %select#clients
+                      %option
+                        %em Choose a client
+                      %option Sally Sparrow
+                  / Hide #list until they've selected a client. What's the feasibility of loading all list data for clients on load so they don't have to see a spinner here?
+                  %select#list
+                    %option Members list
+                    %option Facebook list
+              .pref.arrowed
+                %label The form will ask for:
+                %fieldset
+                  %input#name{:checked => "", :type => "checkbox"}/
+                  %label.checkbox-adjacent{:for => "name"} Name
+                  %br/
+                  %input#name{:checked => "", :type => "checkbox"}/
+                  %label.checkbox-adjacent{:for => "name"} Email
+                  %br/
+                  %input#name{:type => "checkbox"}/
+                  %label.checkbox-adjacent{:for => "name"} Custom field
+              .pref.save
+                %button.primary Save Changes
+                / They haven't added this to the page, redirect to our App. If they have, redirect to their Page.
+      - else
+        %p="You aren't an admin for any Facebook pages. To add a subscribe form to a page, you need to be an admin of the page."
+
     %footer
+    = partial :fb_root, {:js_conf => @js_conf}
