List selection tweaks.

--- a/views/_settings_templates.erb
+++ b/views/_settings_templates.erb
@@ -1,4 +1,5 @@
 <script id="list-options-template" type="text/x-handlebars-template">
+  <option value="nothing">Choose a list</option>
   {{#each lists}}
   <option value="{{ListID}}">{{Name}}</option>
   {{/each}}
