--- a/views/subscription-form.haml
+++ b/views/subscription-form.haml
@@ -4,7 +4,7 @@
     %title CM
     %meta{:content => "text/html; charset=utf-8"}/
     %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
-    %link{:href => "/fb.css?v=#{media_version}", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => versioned_stylesheet('fb'), :rel => "stylesheet", :type => "text/css"}/
     %script{:type => "text/javascript", :src => "//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"}
     %script{:type => "text/javascript", :src => "/js/jquery-ui-core.min.js"}
     /[if lt IE 9]
